# natron-plugins

./: .gitignore  CMakeLists.txt  README.md  lp_NoiseDistort
Channel/ChannelMerge/: ChannelMerge.py  ChannelOffset.xml  README.md
Channel/ChannelOffset/: ChannelOffset.py  ChannelOffset.xml  (+1 more)
Duck/: DUCK_Alpha_Edge_v2.py  DUCK_Denoise_v2.py  DUCK_Skin_Cleaner_v1.py  DUCK_Smart_Blur_v1.py
Filter/: lp_Feather_adv.py
Lens_Flare_Presets/: README.md
Pixelfudger/: PxF_ChromaBlur.py
Resources/: Darwin.xml  Linux.xml  Windows.xml  core.xml  setup.sh
Shadertoy/: AFX_DeSpill.frag.glsl  AFX_Grade.frag.glsl  AFX_ReverseGrade.frag.glsl  Add_GL.frag.glsl  CPGP_FractalCell.frag.glsl  Crok_2color.frag.glsl  Crok_3d_grid.frag.glsl  Crok_6567.frag.glsl  Crok_ascii_art.frag.glsl  Crok_beer.frag.glsl  Crok_bleachbypas.frag.glsl  Crok_bleachbypass.frag.glsl  Crok_blobs.frag.glsl  Crok_block_noise.frag.glsl  Crok_bloom_v01.frag.glsl  Crok_bloom_v02.frag.glsl  Crok_bw.frag.glsl  Crok_cameraflash.frag.glsl  Crok_cel_shading.frag.glsl  Crok_cells.frag.glsl  Crok_cellular.frag.glsl  Crok_checkerboard.frag.glsl  Crok_chromakey.frag.glsl  Crok_cmyk_halftone.frag.glsl  Crok_contour.frag.glsl  Crok_convolve.frag.glsl  Crok_crazy_noise.frag.glsl  Crok_crosshatch.frag.glsl  Crok_crt.frag.glsl  Crok_deband.frag.glsl  Crok_despill.frag.glsl  Crok_difference.frag.glsl  Crok_diffuse.frag.glsl  Crok_dir_blur.frag.glsl  Crok_dir_blur_v02.frag.glsl  Crok_dithering.frag.glsl  Crok_edge_matte.frag.glsl  Crok_emboss.frag.glsl  Crok_exposure.frag.glsl  Crok_fast_grain.frag.glsl  (+107 more)
mS/: mS_RestoreGrain.py
(+1143 files in other folders)
